refactor: ext initalization uses @Initialization